--- a/package.json
+++ b/package.json
@@ -24,17 +24,27 @@
     "@nestjs/platform-express": "^6.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.0",
+    "leveldown": "^5.6.0",
+    "levelup": "^4.4.0",
+    "lowdb": "^1.0.0",
+    "node-json-db": "^1.1.0",
     "query-string": "^6.8.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "uuid": "latest"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
+    "@types/leveldown": "^4.0.2",
+    "@types/levelup": "^4.3.0",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "11.13.4",
+    "@types/node-json-db": "^0.9.3",
     "@types/supertest": "2.0.7",
+    "@types/uuid": "^8.3.0",
     "jest": "24.7.1",
     "prettier": "1.17.0",
     "supertest": "4.0.2",
